Fixing Mobile CSS issue for experience not showing up

--- a/src/containers/workExperience/WorkExperience.scss
+++ b/src/containers/workExperience/WorkExperience.scss
@@ -34,4 +34,19 @@
     font-size: 30px;
     text-align: center;
   }
+
+  .experience-container {
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+
+  .experience-cards-div {
+    grid-template-columns: 1fr; /* Single column on mobile */
+    
+  }
+
+  .experience-container {
+  border: 3px solid red;
+}
 }
